fix z-index error (button could not be clicked)

--- a/app/templates/style.css
+++ b/app/templates/style.css
@@ -34,15 +34,15 @@ input[type=text] {
   letter-spacing: -.01em;
   line-height: 1.3;
   padding: .5rem 1.125rem;
-  position: relative;
+  /* position: relative; */
   text-align: left;
   text-decoration: none;
-  transform: translateZ(0) scale(1);
+  /* transform: translateZ(0) scale(1); */
   transition: transform .2s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .button-search:not(:disabled):hover {
